 - Removed limit on Dialog Topics (was 500 topics per game).
 - Removed length limit on the names of Inventory, GUI and GUI Controls.
 - Removed length limit on the names of Hotspots and Objects.
 - Removed length limit on event handler names.

Editor:
 - Removed legacy game compiler.
 - Raw compiled game data is now saved in "Compiled\Data" folder, as opposed to
   just "Compiled".
 - Editor can now import games older than 2.72, and newer too (3.*) if you have
   extracted data files from compiled executable.
 - ScriptAPIVersion and ScriptCompatibilityLevel settings now have "Highest"
   option, which is meant for automatically enabling newest script API when
   upgrading old project in a newer editor.
 - Added new "Default Setup" pane, which works similarily to "General Settings"
   and lets you configure default values for game setup.
 - Added "Font Height (pixels)" readonly property to the Font's pane, which
   works for both WFN and TTF fonts and may be used as a reference.
 - Made Editor correctly detect modern versions of MS Windows for display on
   About dialog and when sending anonymous statistics.
 - New application icon to comply with 3.4.0 splash screen.
 - Fixed #ifver and #ifnver not working properly if version number had only one
   component (major version).
 - Few improvements to the game compilation made in hope to reduce occasional
   data corruption.

Script:
 - Fixed local variables not working in the switch's case expressions.
 - Fixed Strings in switch, making them compare by value again.
 - Fixed compiler mistakes caused by the use of objects of empty type
   (that is - struct without any variables in it).

Script API:
 - A new parameter StopMovementStyle is added to following functions: LockView,
   LockViewAligned, LockViewFrame, LockViewOffset, UnlockView. This parameter
   can be eStopMoving (default) or eKeepMoving.
 - Added missing readonly properties to get Lighting/Tinting parameters for