@@ -1,9 +1,9 @@
 #ifndef __AGS_CN_CORE__DEFVERSION_H
 #define __AGS_CN_CORE__DEFVERSION_H
 
-#define ACI_VERSION_STR      "3.4.1.5"
+#define ACI_VERSION_STR      "3.4.1.6"
 #if defined (RC_INVOKED) // for MSVC resource compiler
-#define ACI_VERSION_MSRC_DEF  3,4,1,5
+#define ACI_VERSION_MSRC_DEF  3,4,1,6
 #endif
 
 #ifdef NO_MP3_PLAYER
