@@ -1,6 +1,6 @@
 {
-    "version": "3.4.1.5",
+    "version": "3.4.1.6",
     "versionFriendly": "3.4.1",
-    "versionSp": "beta-5",
+    "versionSp": "beta-6",
     "appID": "80db0980-33f3-49e1-ad8a-7d27068cdd1d"
 }
